--- a/AppMobileMoto/AppMobileMoto/AppShell.xaml
+++ b/AppMobileMoto/AppMobileMoto/AppShell.xaml
@@ -84,7 +84,7 @@
     <FlyoutItem Title="Browse" Icon="icon_feed.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Browse Clients" Icon="icon_feed.png">
+    <FlyoutItem Title="Browse Users" Icon="icon_feed.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ClientPage}" />
     </FlyoutItem>
 
