--- a/AppMobileMoto/AppMobileMoto/Views/LoginPage.xaml
+++ b/AppMobileMoto/AppMobileMoto/Views/LoginPage.xaml
@@ -8,6 +8,10 @@
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
+            <Label Grid.Column="0" Grid.Row="0" Text="Username:" FontSize="Medium"  />
+            <Editor Text="{Binding UserNameC, Mode=TwoWay}" FontSize="Medium"/>
+            <Label Grid.Column="0" Grid.Row="0" Text="Password:" FontSize="Medium" />
+            <Entry Text="{Binding PasswordC, Mode=TwoWay}" FontSize="Medium" IsPassword="true"/>
             <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
         </StackLayout>
     </ContentPage.Content>
