--- a/AppMobileMoto/AppMobileMoto/Views/MessagePage.xaml
+++ b/AppMobileMoto/AppMobileMoto/Views/MessagePage.xaml
@@ -1,35 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppMobileMoto.Views.ClientPage"
+             x:Class="AppMobileMoto.Views.MessagePage"
              Title="{Binding Title}"
              xmlns:local="clr-namespace:AppMobileMoto.ViewModels"  
-             xmlns:model="clr-namespace:AppMobileMoto.Models"  
-             x:Name="BrowseClientsPage"
+             xmlns:model="clr-namespace:AppMobileMoto.Models"
+             x:Name="BrowseBillPage"
              >
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Command="{Binding AddItemCommand}" />
-    </ContentPage.ToolbarItems>
-    <RefreshView x:DataType="local:ClientViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+    <RefreshView x:DataType="local:MessagesViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Items}"
                 SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <StackLayout Padding="10" x:DataType="model:Client">
-                        <Label Text="{Binding Username}" 
+                    <StackLayout Padding="10" x:DataType="model:Messages">
+                        <Label Text="{Binding AnnouncementTitle}" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16" />
-                        <Label Text="{Binding Password}" 
-                            Style="{DynamicResource ListItemDetailTextStyle}"
-                            FontSize="13" />
-                        <Label Text="{Binding IsActive}" 
+                        <Label Text="{Binding Message}" 
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="13" />
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:ClientViewModel}}, Path=ItemTapped}"		
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:MessagesViewModel}}, Path=ItemTapped}"		
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </StackLayout.GestureRecognizers>
