Broken refresh on MessageDetail

--- a/AppMobileMoto/AppMobileMoto/Views/ItemDetailPage.xaml
+++ b/AppMobileMoto/AppMobileMoto/Views/ItemDetailPage.xaml
@@ -67,7 +67,7 @@
         </Grid>
         <Label Text="Description:" FontSize="Medium" />
         <Label Text="{Binding Description}" FontSize="Small"/>
-        <Button Text="Message Seller" Command="{Binding AddItemCommand}"/>
+        <Button Text="Message Seller" Command="{Binding MsgSeller}"/>
     </StackLayout>
     
 </ContentPage>
