--- a/AppMobileMoto/AppMobileMoto/Views/MessageDetailPage.xaml
+++ b/AppMobileMoto/AppMobileMoto/Views/MessageDetailPage.xaml
@@ -1,12 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:AppMobileMoto.ViewModels" xmlns:model="clr-namespace:System.ServiceModel.Channels;assembly=System.ServiceModel" x:DataType="viewmodels:MessageDetailViewModel"
              x:Class="AppMobileMoto.Views.MessageDetailPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+    <RefreshView x:DataType="viewmodels:MessageDetailViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+        <StackLayout Spacing="20" Padding="15">
+            <CollectionView x:Name="MesseageListView"
+                ItemsSource="{Binding MessForViews}"
+                SelectionMode="None">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Padding="10" x:DataType="model:Message">
+                            <Label Text="{Binding .}" 
+                                   HorizontalOptions="FillAndExpand"
+                            Style="{DynamicResource ListItemTextStyle}" 
+                            FontSize="16" />
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <Label Text="Your message:"/>
+            <Editor Text="{Binding Message, Mode=TwoWay}"/>
+            <StackLayout Orientation="Horizontal">
+                <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
+                <Button Text="Send" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
+            </StackLayout>
         </StackLayout>
-    </ContentPage.Content>
+    </RefreshView>
 </ContentPage>
